[gd_scene load_steps=4 format=2]

[ext_resource path="res://Chaarcteres/Enemigos/Enemigo_torreta/AI_torreta.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[node name="AI_torreta" type="Node2D" groups=["AI"]]
script = ExtResource( 1 )

[node name="campo_de_vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="campo_de_vision"]
shape = SubResource( 1 )

[node name="zona_agro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zona_agro"]
shape = SubResource( 2 )

[node name="timer_patrullaje" type="Timer" parent="."]

[node name="timer_agro" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="campo_de_vision" to="." method="_on_campo_de_vision_body_entered"]
[connection signal="body_exited" from="campo_de_vision" to="." method="_on_campo_de_vision_body_exited"]
[connection signal="body_exited" from="zona_agro" to="." method="_on_zona_agro_body_exited"]
[connection signal="timeout" from="timer_patrullaje" to="." method="_on_timer_patrullaje_timeout"]
[connection signal="timeout" from="timer_agro" to="." method="_on_timer_agro_timeout"]
